--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Source/CDT"]
-	path = Source/CDT
+[submodule "Source/ThirdParty/CDT/CDT"]
+	path = Source/ThirdParty/CDT/CDT
 	url = https://github.com/artem-ogre/CDT
